finished css changes and rework. added different images for background and icons

--- a/products.html
+++ b/products.html
@@ -284,10 +284,16 @@
 
 
 
-  <footer>
-
+  <footer class="footer">
+    <p>&copy; 2024 My Website</p>
+    <p>
+      <a href="#home">Home</a>
+      <a href="#about">About Us</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+      <a href="#privacy">Privacy Policy</a>
+    </p>
   </footer>
-
   <div class="bg"></div>
   <div class="bg bg2"></div>
   <div class="bg bg3"></div>
