--- a/home-page.html
+++ b/home-page.html
@@ -218,9 +218,15 @@
   </main>
 
 
-
-  <footer>
-
+  <footer class="footer">
+    <p>&copy; 2024 My Website</p>
+    <p>
+      <a href="#home">Home</a>
+      <a href="#about">About Us</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+      <a href="#privacy">Privacy Policy</a>
+    </p>
   </footer>
   <div class="bg"></div>
   <div class="bg bg2"></div>
