--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="css/site.css">
+  <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
@@ -64,11 +65,6 @@
 
               </li>
               <li class="nav-item">
-
-                <a id="sociallink" class="nav-link" href="social.html">Check Our Socials</a>
-
-              </li>
-
                 <a id="sociallink" class="nav-link" href="social.html">Socials</a>
 
               </li>
@@ -115,9 +111,15 @@
   </main>
 
 
-
-  <footer>
-
+  <footer class="footer">
+    <p>&copy; 2024 My Website</p>
+    <p>
+      <a href="#home">Home</a>
+      <a href="#about">About Us</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+      <a href="#privacy">Privacy Policy</a>
+    </p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -125,5 +127,8 @@
     crossorigin="anonymous"></script>
   <script src="scripts/site.js"></script>
 </body>
-
+<video autoplay muted loop class="bg-video">
+  <source src="images/videoplayback.mp4" type="video/mp4"> <!-- Replace with the path to your video -->
+  Your browser does not support HTML5 video.
+</video>
 </html>
