--- a/registration.html
+++ b/registration.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="css/site.css">
+  <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
@@ -101,20 +102,20 @@
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email Address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <div id="emailHelp" class="form-text" style="color: #d1c7e6;">We'll never share your email with anyone else.</div>
             </div>
             <!-- passwords -->
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" aria-describedby="passwordHelp">
-              <div id="passwordHelp" class="form-text"> Must include: one uppercase letter, special symbol(!@#$%^&*),
+              <div id="passwordHelp" class="form-text" style="color: #d1c7e6;"> Must include: one uppercase letter, special symbol(!@#$%^&*),
                 and numbers.</div>
             </div>
 
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label"><strong>Confirm Password</strong></label>
               <input type="password" class="form-control" id="exampleInputPassword2" aria-describedby="confirmPassword">
-              <div id="confirmPassword" class="form-text">Both passwords must match.</div>
+              <div id="confirmPassword" class="form-text" style="color: #d1c7e6;">Both passwords must match.</div>
             </div>
 
             <div class="row-mb-3">
@@ -166,7 +167,7 @@
             </label>
           </div>
         </div> 
-            <button type="submit" class="btn btn-secondary">Sign Up</button>
+            <button type="submit" class="btn login-signupbutton">Sign Up</button>
           </form>
            
         </div>
@@ -177,14 +178,24 @@
 
 
 
-  <footer>
-
+  <footer class="footer">
+    <p>&copy; 2024 My Website</p>
+    <p>
+      <a href="#home">Home</a>
+      <a href="#about">About Us</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+      <a href="#privacy">Privacy Policy</a>
+    </p>
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  <video autoplay muted loop class="bg-video">
+    <source src="images/videoplayback.mp4" type="video/mp4"> <!-- Replace with the path to your video -->
+    Your browser does not support HTML5 video.
+  </video>
+ 
+</body>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script src="scripts/site.js"></script>
-</body>
-
 </html>
